--- a/resource/css/common.css
+++ b/resource/css/common.css
@@ -9,14 +9,17 @@
 .box_layout > .img{flex:none}
 
 .grp_form+.grp_form,
+.grp_form+.grp_flex,
 .grp_flex+.grp_form,
 .grp_flex+.grp_flex{margin-top: 15px;}
 
 .grp_form > p.tit{font-weight: 700;text-align: left;font-size: 15px;color: #212529;margin-bottom: 10px;}
 .grp_form > p span{font-size: 14px;margin-left: 6px;}
 
-.grp_flex{display: flex;align-items: center;gap: 40px;}
-.grp_flex > .grp_form{flex:1;margin: 0;}
+.grp_flex{display: flex;align-items: center;gap: 10px;}
+.grp_flex > .grp_form{flex:1;margin: 0 !important;}
+.grp_flex > .grp_form[style*="width"]{flex:none}
+.grp_flex > .grp_form.cal{width: 135px;flex:none}
 .grp_input{display: flex;align-items: center;}
 .grp_input > input[type="text"],
 .grp_input > input[type="password"],
@@ -34,23 +37,18 @@
 .grp_input > span{font-weight: 500;font-size: 20px;line-height: 25px;color: #212631;flex:none}
 .grp_input input[type="text"],
 .grp_input input[type="password"]{width:100%;padding:0 15px;height: 55px;background: #F1F3F5;border-radius: 10px;flex:1;box-sizing: border-box;font-weight: 400;font-size: 15px;}
-.grp_input textarea{width:100%;padding:15px 20px;height: 150px;background: #F1F3F5;border-radius: 10px;flex:1;box-sizing: border-box;font-weight: 400;font-size: 20px;line-height: 150%;color:#212631;resize: none;}
+.grp_input textarea{width:100%;padding:15px 20px;height: 150px;background: #F1F3F5;border-radius: 10px;flex:1;box-sizing: border-box;font-weight: 400;font-size: 15px;line-height: 150%;color:#212631;resize: none;}
 .grp_input input[type="text"]::placeholder,
 .grp_input input[type="password"]::placeholder,
 .grp_input textarea::placeholder{color: #ADB5BD;}
-.grp_input select{width:100%;padding:0 20px;height: 60px;background:#F1F3F5 url(../images/ico_select.svg) no-repeat right 20px center;border-radius: 10px;flex:1;box-sizing: border-box;font-weight: 400;font-size: 20px;line-height: 23px;appearance: none;-webkit-appearance: none;-moz-appearance: none; }
+.grp_input select{width:100%;padding:0 15px;height: 55px;background:#F1F3F5 url(../images/ico_select.svg) no-repeat center right 12px;border-radius: 10px;flex:1;box-sizing: border-box;font-weight: 400;font-size: 15px;appearance: none;-webkit-appearance: none;-moz-appearance: none; }
 .grp_input select::-ms-expand{display:none;}
-.grp_input .txt_vali{display: none;font-size: 18px;font-weight: 500;color:#E03131;}
-.grp_input .txt_vali.on{display:block}
-.grp_sch {position: relative;display: flex;}
-.grp_sch input[type="text"]{padding-right: 60px;}
-.grp_sch input[type="text"]+button{position: absolute;top:0;right:0;width:60px;height: 60px;background: url(../images/ico_sch.png) no-repeat center;}
-.grp_file {position: relative;display: flex;}
-.grp_file input[type="text"]{padding-right: 60px;}
-.grp_file input[type="text"]+button{position: absolute;top:0;right:0;width:60px;height: 60px;background: url(../images/ico_file.png) no-repeat center;}
-.grp_sch.password {position: relative;display: flex;}
-.grp_sch.password input[type="password"]{padding-right: 60px;}
-.grp_sch.password input[type="password"]+button{position: absolute;top:0;right:0;width:60px;height: 60px;background: url(../images/ico_pw.png) no-repeat center;}
+
+.grp_cal{display: inline-flex;align-items: center;position: relative;}
+.grp_cal input[type="text"]{width: 100%;padding: 0 47px 0 10px;}
+.grp_cal button{position: absolute;top:6px;right:7px;width: 40px;height: 40px; background: url(../images/ico_cal.svg) no-repeat center; }
+.grp_cal input[type="text"]:read-only + button{opacity: 0.4;}
+
 .grp_input.bot{align-items: flex-end;}
 .grp_form.flex{display: flex;align-items: center;}
 .grp_form.flex > p{flex:none;margin-right: 20px;width: 140px;text-align: right;margin-bottom: 0;}
@@ -61,9 +59,9 @@
 
 .grp_radio{display: flex;}
 .grp_radio input{display: none;}
-.grp_radio label{flex:1;padding: 0;font-weight: 600;font-size: 15px;color: #ADB5BD;border: 1px solid #DEE2E6;background: #fff;border-radius: 10px;box-sizing: border-box;cursor: pointer;margin-right: 10px;height: 55px;display: flex;align-items: center;justify-content: center;}
+.grp_radio label{flex:1;padding: 0;font-weight: 600;font-size: 15px;color: #ADB5BD;border: 1px solid #F1F3F5;background: #F1F3F5;border-radius: 10px;box-sizing: border-box;cursor: pointer;margin-right: 10px;height: 55px;display: flex;align-items: center;justify-content: center;}
 .grp_radio label:last-child{margin-right: 0;}
-.grp_radio input[type="radio"]:checked + label{border-color:#2962F6;color:#2962F6;box-shadow: inset 0 0 0 1px #2962F6;}
+.grp_radio input[type="radio"]:checked + label{border-color:#2962F6;color:#2962F6;box-shadow: inset 0 0 0 1px #2962F6;background: #fff;}
 .grp_radio.img label::before{content: '';display: block;width: 40px;height: 36px;background: url("../images/img_radio_dog.png") no-repeat center;background-size: contain;box-sizing: border-box;margin-right: 5px;}
 .grp_radio.img label:last-child{margin-right: 0;}
 .grp_radio.img label:last-child::before{width: 47px;background: url("../images/img_radio_cat.png") no-repeat center;background-size: contain;}
@@ -102,6 +100,7 @@ header .header_inner{max-width: 1280px;width: 100%;margin: 0 auto;display: flex;
 .header_inner .right{margin-left: auto;display: flex;align-items: center;}
 .header_inner .grp_link{margin-left: auto;}
 .header_inner .grp_link a{display: inline-block;color:#212529;text-decoration: none;font-size: 16px;font-weight: 500;line-height: 150%;}
+.header_inner .grp_link a.on,
 .header_inner .grp_link a:hover{font-weight: 900;color:#2962F6}
 .header_inner .grp_link a + a{margin-left: 50px;}
 .header_inner .btn_chat{display:inline-block;margin-left: 50px;line-height: 26px;text-decoration: none;color:#2962F6;font-size: 16px;font-weight: 600;padding-left: 37px;background: url('../images/ico_chat.svg') no-repeat center left;}
@@ -123,10 +122,15 @@ article h2{margin-bottom: 14px;font-size: 26px;font-weight: 700;line-height: 140
 
 .box_layout .box_form h2{text-align: center;}
 .box_layout .box_form .tit_sub{margin: 5px 0 20px;line-height: 140%;font-size: 15px;font-weight: 600;color:#495057;text-align: center;}
+.box_layout .box_form .grp_badge{display: flex;align-items: center;justify-content: center;gap: 6px;margin-bottom: 5px;}
+.box_layout .box_form .grp_badge .badge{display: flex;align-items: center;justify-content: center;padding: 10px;height: 38px;border-radius: 30px;background: #2962F6;color: #fff;box-sizing: border-box;font-size: 13px;font-weight: 700;}
 .box_layout .box_form .check{margin-top: 20px;}
 .box_layout .box_form .check p{font-size: 15px;font-weight: 600;}
 .box_layout .box_form .grp_check{margin-top: 10px;}
-.box_layout .box_form button{margin: 10px auto 0;display: flex;align-items: center;justify-content: center;width: 200px;height: 55px;border-radius: 40px;background: #2962F6;color:#fff;font-size: 16px;font-weight: 700;}
+.box_layout .box_form .btn_cm{margin: 10px auto 0;display: flex;align-items: center;justify-content: center;width: 200px;height: 55px;border-radius: 40px;background: #2962F6;color:#fff;font-size: 16px;font-weight: 700;}
+.box_layout .box_form .btn_cm.gray{background: #ADB5BD;width: 120px;}
+.box_layout .box_form .grp_btn{display: flex;gap:10px}
+/* .box_layout .box_form .grp_btn .btn_cm{margin-top: 0;} */
 
 .list_main{display: flex;gap: 20px;}
 .list_main > li{flex:1;border-radius: 10px;}
@@ -240,9 +244,8 @@ footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.png) no-repeat 
 .cont_wrap .box_text p{font-size: 18px;font-weight: 500;line-height: 140%;color:#868E96}
 .cont_wrap .box_text p+p{margin-top: 30px;}
 .cont_wrap .box_layout{gap: 104px;}
-.cont_wrap .box_layout .box_form{position: relative;flex:none;width: 376px;padding:0 30px;}
+.cont_wrap .box_layout .box_form{position: relative;flex:none;width: 376px;padding:0 30px;box-sizing: border-box;}
 .cont_wrap .box_layout .box_form:before{content: '';position: absolute;left:-52px;top:0;border-left: 1px solid #E9ECEF;height: 100%;}
-
 
 
 /* 반응형 - 태블릿 */
@@ -254,7 +257,8 @@ footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.png) no-repeat 
     .header_inner .grp_link a + a{margin-left: 35px;}
     .header_inner .btn_chat{margin-left: 35px;font-size: 12px;background-size: 19px auto;padding-left: 25px;}
 
-    .grp_form+.grp_form, 
+    .grp_form+.grp_form,
+    .grp_form+.grp_flex,
     .grp_flex+.grp_form, 
     .grp_flex+.grp_flex{margin-top: 10px;}
     .grp_form > p.tit{font-size: 10px;margin-bottom: 7px;}
@@ -268,6 +272,9 @@ footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.png) no-repeat 
     .grp_check label:before{width: 18px;height: 18px;border-radius: 3px;}
     .grp_check label:after{left: 4px;top: 8px;width: 8px;height: 3px;border-width: 0 0 2px 2px;}
     .grp_check > a{font-size: 10px;margin-left: 7px;}
+    .grp_input select{height: 38px;font-size: 10px;background-size: 20px;}
+    .grp_flex > .grp_form.cal{width: 100px;flex:none}
+    .grp_cal button{top: 1px;right:2px;width:30px;height: 36px;background-size: 16px;}
 
     .box_layout{gap: 14px;}
     .sec_main01{padding: 24px 35px;}
@@ -279,7 +286,7 @@ footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.png) no-repeat 
     .box_layout .box_form .tit_sub{margin: 4px 0 14px;font-size: 10px;}
     .box_layout .box_form .check{margin-top: 14px;}
     .box_layout .box_form .check p{font-size: 10px;}
-    .box_layout .box_form button{height: 38px;border-radius: 28px;width: 140px;font-size: 12px;}
+    .box_layout .box_form .btn_cm{height: 38px;border-radius: 28px;width: 140px;font-size: 12px;}
 
     .section_inner{max-width: 896px;}
     .section_inner h2{font-size: 19px;}
@@ -355,8 +362,9 @@ footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.png) no-repeat 
     .cont_wrap .box_text p{font-size: 12px;}
     .cont_wrap .box_text p+p{margin-top: 21px;}
     .cont_wrap .box_layout{gap: 79px;}
-    .cont_wrap .box_layout .box_form{width: 257px;padding: 0 20px;}
+    .cont_wrap .box_layout .box_form{width: 257px;padding: 0 14px;}
     .cont_wrap .box_layout .box_form::before{left: -39px;}
+    .box_layout .box_form .grp_badge .badge{font-size: 10px;height: 28px;border-radius: 21px;padding: 0 6px;}
 
 
 }
